<resources>
    <string name="app_name">LoginCommunityApp</string>

    <!--로그인 페이지-->
    <string name="login_page_title">로그인</string>
    <string name="login_page_login_id_title">이메일</string>
    <string name="login_page_password_title">비밀번호</string>
    <string name="login_button_text">로그인</string>
    <string name="sign_up_button_text">회원가입</string>
    <string name="delete_profile_button_text">회원 탈퇴</string>

    <string name="login_success_message">로그인에 성공하였습니다.</string>
    <string name="login_fail_message">로그인에 실패하였습니다. 입력을 다시 한 번 확인해 주세요.</string>

    <string name="deleteProfile_dialog_title">회원 탈퇴</string>
    <string name="deleteProfile_dialog_message">정말로 탈퇴하시겠습니까?</string>
    <string name="deleteProfile_success_message">회원 탈퇴를 완료했습니다.</string>
    <string name="deleteProfile_fail_message">회원 탈퇴를 실패하였습니다.</string>


    <!--회원 가입 페이지-->
    <string name="sign_up_page_title"> 회원 가입</string>
    <string name="sign_up_page_id_title">이메일</string>
    <string name="sign_up_page_password_title">비밀번호</string>
    <string name="sign_up_page_complete_text">회원 가입 완료하기</string>

    <string name="sign_up_success_message">회원가입에 성공하였습니다.</string>
    <string name="sign_up_fail_message">회원가입에 실패하였습니다. 입력을 다시 한 번 확인해 주세요.</string>

    <!--메인 페이지-->
    <string name="logout_button_message">로그아웃</string>
    <string name="logout_message">로그아웃 하였습니다.</string>
    <string name="post_delete_dialog_title">게시글 삭제</string>
    <string name="post_delete_dialog_message">정말로 이 게시글을 삭제하시겠습니까?</string>
    <string name="post_delete__success_message">게시글이 삭제되었습니다.</string>
    <string name="post_delete_fail_message">게시글 삭제에 실패하였습니다.</string>
    <string name="app_finish_dialog_title">앱 종료</string>
    <string name="app_finish_dialog_message">정말로 앱을 종료하시겠습니까?</string>

    <!--게시글 작성 페이지-->
    <string name="idText_hint_message">제목을 입력하세요.</string>
    <string name="content_hint_message">내용을 입력하세요.</string>
    <string name="content_add_button_message">게시글 추가</string>
    <string name="post_upload_success_message">게시글이 업로드 되었습니다.</string>
    <string name="post_upload_fail_message">게시글 업로드에 실패하였습니다.</string>

    <!--공통으로 쓸 메시지-->
    <string name="empty_text_message">이메일과 비밀번호 모두 입력해야 합니다.</string>
    <string name="dialog_yes_message">예</string>
    <string name="dialog_no_message">아니오</string>

</resources>