<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login_page_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_page_login_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_page_login_id_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_page_title" />

    <EditText
        android:id="@+id/et_login_page_login_id_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_page_login_id_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_login_page_login_id_title"
        app:layout_constraintTop_toTopOf="@id/tv_login_page_login_id_title" />

    <TextView
        android:id="@+id/tv_login_page_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_page_password_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_page_login_id_title"
        app:layout_constraintStart_toStartOf="@+id/tv_login_page_login_id_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login_page_login_id_title" />

    <EditText
        android:id="@+id/et_login_page_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_page_password_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_login_page_password_title"
        app:layout_constraintTop_toTopOf="@id/tv_login_page_password_title" />

    <Button
        android:id="@+id/btn_login_page_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_page_sign_up_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_page_password_title" />

    <Button
        android:id="@+id/btn_login_page_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sign_up_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_page_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_login_page_login_button"
        app:layout_constraintTop_toTopOf="@+id/btn_login_page_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>